fix: add level switch on room jump and adapt popup style (#17)
* chore: add level switch on room jump

* chore: adapt room popup style

* chore: add some tests

* chore: adapt tests and add test

--- a/frontend/src/components/map/popup.css
+++ b/frontend/src/components/map/popup.css
@@ -1,4 +1,22 @@
 .maplibregl-popup-content {
     background: var(--background) !important;
     color: var(--foreground) !important;
+    padding: 0 !important;
+}
+
+/* Override maplibre popup colors*/
+.maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
+    border-top-color: var(--mantine-color-dark-6) !important;
+}
+
+.maplibregl-popup-anchor-top .maplibregl-popup-tip {
+    border-bottom-color: var(--mantine-color-dark-6) !important;
+}
+
+.maplibregl-popup-anchor-left .maplibregl-popup-tip {
+    border-right-color: var(--mantine-color-dark-6) !important;
+}
+
+.maplibregl-popup-anchor-right .maplibregl-popup-tip {
+    border-left-color: var(--mantine-color-dark-6) !important;
 }
